# gusl

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  gusl.doap  meson.build  run.in
.github/ISSUE_TEMPLATE/: Bug.md
.github/workflows/: build.yml
.gitlab/issue_templates/: Crash.md
build-aux/flatpak/: io.github.singlerr.gusl.json
completion/: gusl
data/: io.github.singlerr.gusl.desktop.in.in  io.github.singlerr.gusl.gschema.xml  io.github.singlerr.gusl.service.in
data/icons/hicolor/: render-icons.sh
data/metainfo/: io.github.singlerr.gusl.metainfo.xml.in
docs/help/: meson.build
docs/help/C/: index.page  show-about.page
docs/man/: gusl.xml  meson.build
docs/reference/: gusl-docs.xml  gusl-sections.txt  meson.build
po/: POTFILES.in  ar.po  meson.build
src/: editor-window.c  editor-window.h  glsl.y  glsl_parser.h  gusl-application.c  gusl-application.h  gusl-log.c  gusl-log.h  gusl-settings.c  gusl-settings.h  gusl-utils.c  gusl-utils.h  gusl-window.c  gusl-window.h  library.c  main.c  meson.build  shader_source.c  shader_source.h  version.h.in
src/resources/: gusl.gresource.xml
src/resources/ui/: editor-window.ui  gusl-window.ui  startup-window.ui
tests/: log.c  meson.build  settings.c  utils.c
